feat(ui, core): Implement application core logic and modular UI framework
This commit introduces the main application logic and transitions the UI
from a monolithic approach to a modular, event-driven framework. It
lays the groundwork for all future UI and feature development.

- **UI Architecture:**
  - Introduced a polymorphic window system with a base class `WindowPopup`
    to manage different UI windows (About, New Canvas, etc.).
    - Note: A custom window management system (`WindowPopup`) was favored
      over the standard `ImGui::Popup` mechanism. This decision was made
      to gain more control over window state and behavior, as the default
      popup system sometimes exhibited unexpected behavior, particularly
      with complex interactions or when triggered from the main menu bar.
  - `Application` now manages a collection of these windows, decoupling it
    from the specific implementation of each UI element.
  - Implemented an event-driven communication system using `UIContext` and
    `UIEvents` to pass information from the UI layer to the core
    application logic.

- **Implemented UI Windows:**
  - `NewCanvasWindow`: A fully functional dialog for creating a new canvas,
    allowing users to select size and background color.
  - `AboutWindow`: A static window providing information about the project,
    author, and technologies used.

- **Canvas Implementation:**
  - Created `Canvas` class to manage the pixel buffer, texture, and
    rendering.
  - Features methods for pixel manipulation (`setPixel`), clearing
    (`clear`), and rendering.
  - The `clear` method uses an optimized `reinterpret_cast` with
    `std::fill_n` for high performance.

- **Configuration and Styling:**
  - Centralized application settings (canvas sizes, default colors) into a
    `config.h` file.
  - Moved all ImGui style and font setup into a dedicated `imgui_setup`
    module.
  - Added RAII-based helpers (`pusherStyleColor`, `pusherStyleVar`).

- **Generator Framework:*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,12 @@ set(IMGUI_SFML_SOURCES
 )
 
 add_executable(${PROJECT_NAME} 
-    src/main.cpp 
+    src/core/main.cpp 
     src/core/application.cpp 
-    src/gui/imgui_setup.cpp
+    src/core/canvas.cpp 
+    src/gui/imgui_setup.cpp 
+    src/gui/windows/about_window.cpp
+    src/gui/windows/new_canvas_window.cpp
     ${IMGUI_SOURCES} 
     ${IMGUI_SFML_SOURCES} 
 )
