feat(ui): Implement UIManager and refactor UI architecture
This major commit introduces a new, flexible architecture for the UI
system by implementing a central UIManager.

- **Architectural Overhaul:**
  - Introduced `UIManager` to own and manage the lifecycle, focus, and
    rendering of all UI widgets.
  - `Application` class is now decoupled from specific UI windows and
    delegates UI management to `UIManager`.
  - Implemented a dynamic widget creation system using the Factory
    pattern (`WidgetFactory` and `registerWidgetType`) to allow
    multiple instances of the same widget type.
  - Added a `WidgetID` system for unique instance identification.
  - Implemented a focus/render management system using a render stack
    (`m_renderStack`) to control render order and input focus.
  - Introduced `UIManagerInterface` interface to decouple widgets from
    the concrete `UIManager` implementation.

- **Code Quality & Reliability:**
  - Refactored class and type naming to be consistent (PascalCase).
  - Corrected integer division errors in color conversion.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,18 +20,20 @@ set(IMGUI_SOURCES
 )
 
 set(IMGUI_SFML_SOURCES
-    third_party/imgui-sfml/imgui-SFML.cpp 
+    third_party/imgui-sfml/imgui-SFML.cpp
 )
 
 add_executable(${PROJECT_NAME} 
     src/core/main.cpp 
     src/core/application.cpp 
     src/core/canvas.cpp 
-    src/gui/imgui_setup.cpp 
-    src/gui/windows/about_window.cpp
-    src/gui/windows/new_canvas_window.cpp
+    src/gui/imgui_setup.cpp
+    src/gui/widgets/about_window.cpp
+    src/gui/widgets/new_canvas_window.cpp
+    src/gui/widgets/menu_bar.cpp
+    src/gui/ui_manager.cpp
     ${IMGUI_SOURCES} 
-    ${IMGUI_SFML_SOURCES} 
+    ${IMGUI_SFML_SOURCES}
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
