feat(nodegraph): Implement node-based procedural generation engine
This monumental commit introduces a flexible and powerful node-based
architecture for procedural content generation, replacing the previous,
simpler generator model. The new system is built around a "smart
evaluator, dumb nodes" philosophy, enabling complex, non-destructive
workflows.

**Architectural Overhaul:**
- **`NodeGraphEvaluator` (The Engine):**
  - Introduced a central `Evaluator` class responsible for owning all
    nodes, managing the graph of connections, and orchestrating the
    entire evaluation process.
  - Implemented an efficient, cache-aware evaluation system with
    dirty-flag propagation to avoid redundant calculations.
  - Added robust cycle detection to ensure the graph remains a DAG.

- **`Node` (The Logic Unit):**
  - Refactored the `GeneratorAlgorithm` into a passive `Node` class.
  - Each node now declares its own dynamic input/output ports,
    decoupling it from any specific modulation types
  - Implemented a universal property system, allowing nodes to expose
    any type of parameter to the UI in a unified way.

- **Data Flow & Types:**
  - Defined a comprehensive set of types (`types.h`) for the node graph,
    including `NodeID`, `PortID`, `Connection`, and a `NodeData` variant
    for transferring data between nodes.
  - Implemented specialized buffer types (`GrayscaleBuffer`,
    `VectorFieldBuffer`) for efficient, type-safe data handling.

**Proof of Concept:**
  - Implemented the first concrete node, `CheckerPatternNode`, on top
    of the new architecture. This node successfully utilizes dynamic
    ports for parameters (colors, scale) and optional inputs (vector
    distortion), validating the design of the entire system.

**Third-Party Libraries:**
  - Integrated `imnodes` library to provide the foundation for a future
    node-based graphical user interface.

This new architecture provides a solid, scalable, and professional
foundation for all future generato

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED true)
 find_package(SFML 3.0.0 REQUIRED COMPONENTS System Window Graphics CONFIG)
 find_package(OpenGL REQUIRED)
 
-# Manual integration of ImGui and ImGui-SFML due to issues with vcpkg port at the time of development. Source files are located in third_party
-include_directories(include third_party/imgui/include third_party/imgui-sfml/include)
+# Manual integration of ImGui and ImGui-SFML due to issues with vcpkg port at the time of development.
+# Source files are located in third_party
+include_directories(include third_party/imgui/include third_party/imgui-sfml/include third_party/imnodes/include)
 
 set(IMGUI_SOURCES
     third_party/imgui/imgui.cpp 
@@ -23,19 +24,29 @@ set(IMGUI_SFML_SOURCES
     third_party/imgui-sfml/imgui-SFML.cpp
 )
 
-add_executable(${PROJECT_NAME}
+set(IMGUI_IMNODES_SOURCES
+    third_party/imnodes/imnodes.cpp
+)
+
+add_executable(${PROJECT_NAME} # TODO: Split the .cpp connection into smaller CMakeLists.txt
     src/core/application.cpp
-    src/core/main.cpp 
-    src/core/pixel_buffer.cpp
-        src/core/managers/document_manager.cpp
+    src/core/main.cpp
+    src/core/buffers/greyscale_buffer.cpp
+    src/core/buffers/pixel_buffer.cpp
+    src/core/buffers/vector_field_buffer.cpp
+    src/core/managers/document_manager.cpp
     src/core/managers/ui_manager.cpp
     src/gui/widgets/about_window.cpp
     src/gui/widgets/menu_bar.cpp
     src/gui/widgets/new_canvas_window.cpp
     src/gui/canvas.cpp
     src/gui/imgui_setup.cpp
+    src/nodegraph/node.cpp
+    src/nodegraph/evaluator.cpp
+    src/nodegraph/nodes/checker_pattern.cpp
     ${IMGUI_SOURCES} 
     ${IMGUI_SFML_SOURCES}
+    ${IMGUI_IMNODES_SOURCES}
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
@@ -47,7 +58,6 @@ add_custom_target(copy_assets ALL
     ${CMAKE_BINARY_DIR}/assets
 )
 
-# Робимо так, щоб копіювання виконувалось перед запуском MyApp
 add_dependencies(${PROJECT_NAME} copy_assets)
 
 # Coping DLLs to the directory of .exe file
