Fix typo in CMakeLists.txt that did not allow the project to start

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,34 +29,53 @@ set(IMGUI_IMNODES_SOURCES
 )
 
 add_executable(${PROJECT_NAME} # TODO: Split the .cpp connection into smaller CMakeLists.txt
+    # Core
     src/core/application.cpp
     src/core/main.cpp
+
+    # - Buffers
     src/core/buffers/greyscale_buffer.cpp
     src/core/buffers/pixel_buffer.cpp
     src/core/buffers/vector_field_buffer.cpp
+
+    # - Managers
     src/core/managers/document_manager.cpp
     src/core/managers/ui_manager.cpp
+
+    # GUI
+    src/gui/canvas.cpp
+    src/gui/imgui_setup.cpp
+
+    # - Widgets
     src/gui/widgets/about_window.cpp
     src/gui/widgets/menu_bar.cpp
     src/gui/widgets/new_canvas_window.cpp
+
+    # - Node Editor
     src/gui/node_editor/node_editor_widget.cpp
-    src/gui/canvas.cpp
-    src/gui/imgui_setup.cpp
-    src/nodegraph/node.cpp
-    src/nodegraph/evalgiuator.cpp
-    src/nodegraph/nodes/checker_pattern_node.cpp
-    ${IMGUI_SOURCES} 
-    ${IMGUI_SFML_SOURCES}
-    ${IMGUI_IMNODES_SOURCES}
     src/gui/node_editor/node_editor_state.cpp
     src/gui/node_editor/node_editor_renderer.cpp
     src/gui/node_editor/input/commands.cpp
     src/gui/node_editor/input/node_editor_input_handler.cpp
+
+    # Node Graph
+    src/nodegraph/node.cpp
+    src/nodegraph/evaluator.cpp
+
+    src/nodegraph/utils/perlin_noise_2d.cpp
+
+    # - Nodes
+    src/nodegraph/nodes/checker_pattern_node.cpp
     src/nodegraph/nodes/texture_output_node.cpp
     src/nodegraph/nodes/circle_pattern_node.cpp
     src/nodegraph/nodes/rectangle_pattern_node.cpp
     src/nodegraph/nodes/noise_texture_node.cpp
-    src/nodegraph/utils/perlin_noise_2d.cpp
+
+
+    # Libraries
+    ${IMGUI_SOURCES}
+    ${IMGUI_SFML_SOURCES}
+    ${IMGUI_IMNODES_SOURCES}
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
