feat(nodes): Add Value and RGB nodes
This commit added two light nodes - `Value Node` that allows you to
enter a value and returns it to the output and `RGB Node` that allows
you to enter a color and returns it to the output.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ add_executable(${PROJECT_NAME} # TODO: Split the .cpp connection into smaller CM
     ${IMGUI_SOURCES}
     ${IMGUI_SFML_SOURCES}
     ${IMGUI_IMNODES_SOURCES}
+        src/nodegraph/nodes/value_node.cpp
+        src/nodegraph/nodes/rgb_node.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
