--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ add_executable(${PROJECT_NAME} # TODO: Split the .cpp connection into smaller CM
         src/nodegraph/nodes/value_node.cpp
         src/nodegraph/nodes/rgb_node.cpp
         src/nodegraph/nodes/math_node.cpp
+        src/nodegraph/nodes/voronoi_texture_node.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
