feat(nodes): Add advanced color manipulation nodes
This commit introduces a suite of color manipulation nodes directly
within the node graph. It also includes a minor refactoring of core type
definitions for better code organization.

**New Generator Nodes:**
- **`MixColorNode`:**
  - Provides 13 industry-standard blending modes for combining two
    color inputs.
  - A `Factor` input (Grayscale) allows for per-pixel control over
    the blend intensity, enabling complex masking effects.

- **`InvertColorNode`:**
  - Implements color inversion for precise tonal adjustments.
  - Includes a `Factor` input to blend between the original and the
    fully inverted color.

- **`HSVNode` (Hue/Saturation/Value):**
  - Allows for fine-grained control over the color's hue, saturation,
    and value.
  - The implementation is based on the standard RGB to HSV color space
    conversion, providing intuitive and predictable results similar to
    professional graphics software.
  - Includes a `Factor` input for controlling the overall effect
    strength.

**Enhancements & Refactoring:**

- **UI Parameter Constraints:**
  - All relevant input ports on all nodes now have metadata with
    `minValue` and `maxValue`.
- **Code Organization:**
  - Helper functions previously located in `types.h` (like
    `getRequiredInput`, `convertTo`, etc.) have been moved to a new
    `helpers.h` file. This improves separation of concerns, leaving
    `types.h` to define only core data structures and enums.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,9 @@ add_executable(${PROJECT_NAME} # TODO: Split the .cpp connection into smaller CM
         src/nodegraph/nodes/rgb_node.cpp
         src/nodegraph/nodes/math_node.cpp
         src/nodegraph/nodes/voronoi_texture_node.cpp
+        src/nodegraph/nodes/mix_color_node.cpp
+        src/nodegraph/nodes/invert_color_node.cpp
+        src/nodegraph/nodes/hsv_node.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
