feat(nodes): Add vector manipulation utility nodes
This commit introduces a fundamental set of vector utility nodes. These
nodes provide the essential building blocks for manipulating texture
coordinates and other vector data.

**New Utility Nodes:**

- **`MappingNode`:**
  - A node for applying geometric transformations (location, rotation,
    scale) to an incoming vector field.
  - It includes several modes (`Point`, `Texture`, `Vector`).
  - If no input vector is provided, it generates default UV coordinates,
    making it a powerful starting point for many graphs.

- **`CombineXYNode` & `SeparateXYNode`:**
  - A pair of essential channel manipulation nodes that work in tandem.
  - `SeparateXYNode` splits a `VectorField` input into two separate
    `Grayscale` buffers representing the X and Y components.
  - `CombineXYNode` performs the inverse operation, creating a
    `VectorField` from two `Grayscale` inputs.
  - This allows for independent processing of vector components, such as
    distorting only the X-coordinate of a texture or using the
    Y-component as a mask.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,31 +59,39 @@ add_executable(${PROJECT_NAME} # TODO: Split the .cpp connection into smaller CM
     src/gui/node_editor/input/node_editor_input_handler.cpp
 
     # Node Graph
-    src/nodegraph/node.cpp
-    src/nodegraph/evaluator.cpp
+    src/node_graph/node.cpp
+    src/node_graph/evaluator.cpp
 
-    src/nodegraph/utils/perlin_noise_2d.cpp
+    # - Utils
+    src/node_graph/utils/perlin_noise_2d.cpp
 
     # - Nodes
-    src/nodegraph/nodes/checker_pattern_node.cpp
-    src/nodegraph/nodes/texture_output_node.cpp
-    src/nodegraph/nodes/circle_pattern_node.cpp
-    src/nodegraph/nodes/rectangle_pattern_node.cpp
-    src/nodegraph/nodes/noise_texture_node.cpp
-
+    src/node_graph/nodes/texture_output_node.cpp
+    #
+    src/node_graph/nodes/checker_pattern_node.cpp
+    src/node_graph/nodes/noise_texture_node.cpp
+    src/node_graph/nodes/voronoi_texture_node.cpp
+    src/node_graph/nodes/gradient_texture_node.cpp
+    #
+    src/node_graph/nodes/circle_pattern_node.cpp
+    src/node_graph/nodes/rectangle_pattern_node.cpp
+    #
+    src/node_graph/nodes/value_node.cpp
+    src/node_graph/nodes/math_node.cpp
+    #
+    src/node_graph/nodes/rgb_node.cpp
+    src/node_graph/nodes/mix_color_node.cpp
+    src/node_graph/nodes/invert_color_node.cpp
+    src/node_graph/nodes/hsv_node.cpp
+    #
+    src/node_graph/nodes/mapping_node.cpp
 
     # Libraries
     ${IMGUI_SOURCES}
     ${IMGUI_SFML_SOURCES}
     ${IMGUI_IMNODES_SOURCES}
-        src/nodegraph/nodes/value_node.cpp
-        src/nodegraph/nodes/rgb_node.cpp
-        src/nodegraph/nodes/math_node.cpp
-        src/nodegraph/nodes/voronoi_texture_node.cpp
-        src/nodegraph/nodes/mix_color_node.cpp
-        src/nodegraph/nodes/invert_color_node.cpp
-        src/nodegraph/nodes/hsv_node.cpp
-        src/nodegraph/nodes/gradient_texture_node.cpp
+        src/node_graph/nodes/combine_xy_node.cpp
+        src/node_graph/nodes/separate_xy_node.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics SFML::Window SFML::System)
